--- a/app.css
+++ b/app.css
@@ -49,7 +49,6 @@ body {
 }
 [data-tip] {
   position:relative;
-  cursor:help;
 }
 [data-tip]:before {
   content:'';
@@ -93,17 +92,12 @@ body {
 [data-tip]:hover:after {
   display:block;
 }
-.tip-above[data-tip]:after {
-  top: -108px;
-  left: -101px;
-  height: 92px;
-  width: 210px;
-}
 .tip-below[data-tip]:after {
   top: 22px;
   left: -101px;
-  height: 92px;
+  height: 104px;
   width: 210px;
+  box-shadow: rgba(0, 0, 0, 0.3) 0 2px 10px;
 }
 .tip-below[data-tip]:before {
   border-top-color:transparent;
